--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
@@ -115,13 +115,13 @@
 								<b>
 									<font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=10998">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/8.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/8.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=10733">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2-1.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/2-1.gif"></a></font></b></td>
 									</tr>
 									<tr>
 								<b>
@@ -131,13 +131,13 @@
 								<b>
 									<font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=11106">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/3.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/3.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=10422">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/4.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/4.gif"></a></font></b></td>
 								</font></b>
 									</tr>
 									<tr>
@@ -148,13 +148,13 @@
 								<b>
 									<font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=10386">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/5.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/5.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=10396">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/6.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/6.gif"></a></font></b></td>
 								</font></b>
 									</tr>
 									<tr>
@@ -164,14 +164,14 @@
                                 <p align="right">
 								<b><font color="#db0f21" size="5">
 									<a href="default.asp?ArtNr=11010">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/7.gif"></a></font></b></td>
+					<img border="0" src="../images/start/grip/7.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 								<b>
 									<font color="#db0f21" size="5">
 									<sub><a href="default.asp?ArtNr=10748">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2.gif"></a></sub></font></b></b></td>
+					<img border="0" src="../images/start/grip/2.gif"></a></sub></font></b></b></td>
 								</font></b>
 									</tr>
 									<tr>
@@ -180,13 +180,13 @@
 								<b>
 									<font color="#db0f21" size="5">
 								<sub><a href="default.asp?ArtNr=10567">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/1.gif"></a></sub></font></b></td>
+					<img border="0" src="../images/start/grip/1.gif"></a></sub></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
 									<sub><a href="default.asp?ArtNr=10873">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/9.gif"></a></sub></font></b></td>
+					<img border="0" src="../images/start/grip/9.gif"></a></sub></font></b></td>
 									</tr>
 									<tr>
 								<b>
