--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_lifestyle.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_lifestyle.htm
@@ -101,14 +101,14 @@
 											</font>
 												<font color="#FFFFFF">
 											<a href="http://www.pros-pro.com/download/datasheet/ionen_DE.pdf" target="_blank">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/1-1.gif"></a></font></a></b></font><p align="center" style="margin-top: 0; margin-bottom: 0">
+					<img border="0" src="../images/start/lifestyle/1-1.gif"></a></font></a></b></font><p align="center" style="margin-top: 0; margin-bottom: 0">
                                             <b><font color="#db0f21" size="5">
 												<a href="default.asp?ArtNr=10687">
 												<font color="#FFFFFF">
 											</font>
 												<font color="#FFFFFF">
 											<a href="http://www.pros-pro.com/download/datasheet/ionen_DE.pdf" target="_blank">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/1-3.gif"></a><a href="http://www.pros-pro.com/download/datasheet/ionen_EN.pdf" target="_blank"><img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/1-4.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/1-3.gif"></a><a href="http://www.pros-pro.com/download/datasheet/ionen_EN.pdf" target="_blank"><img border="0" src="../images/start/lifestyle/1-4.gif"></a></font></a></b></td>
 											</tr>
 											<tr>
 												<td>
@@ -116,7 +116,7 @@
                                             <b>
 								<font color="#FFFFFF" size="5">
 											<a href="default.asp?ArtNr=10817">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/4.gif"></a></font></b></td>
+					<img border="0" src="../images/start/lifestyle/4.gif"></a></font></b></td>
 												<td colspan="2" rowspan="2">
 												<p align="center">
                                             <font color="#db0f21" size="5">
@@ -124,7 +124,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10860">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/3.gif"></a></font></a></b><b><font color="#db0f21" size="5"></b></td>
+					<img border="0" src="../images/start/lifestyle/3.gif"></a></font></a></b><b><font color="#db0f21" size="5"></b></td>
 											</tr>
 											<tr>
 												<td>
@@ -134,7 +134,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10857">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/5.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/5.gif"></a></font></a></b></td>
 											</tr>
 											<tr>
 												<td>
@@ -142,7 +142,7 @@
                                             <b>
 								<font color="#FFFFFF" size="5">
 								<a href="default.asp?ArtNr=10840">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/2.gif"></a></font></b></td>
+					<img border="0" src="../images/start/lifestyle/2.gif"></a></font></b></td>
 												<td>
 												<p align="center">
                                             <font color="#db0f21" size="5">
@@ -150,7 +150,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10843">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/6.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/6.gif"></a></font></a></b></td>
 												<td>
 												<p align="right">
                                             <font color="#db0f21" size="5">
@@ -158,7 +158,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10847">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/7.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/7.gif"></a></font></a></b></td>
 											</tr>
 											<tr>
 												<td>
@@ -168,7 +168,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10841">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/9.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/9.gif"></a></font></a></b></td>
 												<td>
 												<p align="center">
                                             <font color="#db0f21" size="5">
@@ -176,7 +176,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10846">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/10.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/10.gif"></a></font></a></b></td>
 												<td>
 												<p align="right">
                                             <font color="#db0f21" size="5">
@@ -184,7 +184,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10850">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/11.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/11.gif"></a></font></a></b></td>
 											</tr>
 											<tr>
 												<td>
@@ -194,7 +194,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10852">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/8.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/8.gif"></a></font></a></b></td>
 												<td>
 												<p align="center">
                                             <font color="#db0f21" size="5">
@@ -202,7 +202,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10832">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/13.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/13.gif"></a></font></a></b></td>
 												<td>
 												<p align="right">
                                             <font color="#db0f21" size="5">
@@ -210,7 +210,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10826">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/14.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/14.gif"></a></font></a></b></td>
 											</tr>
 											<tr>
                                             <b>
@@ -222,7 +222,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10854">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/12.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/12.gif"></a></font></a></b></td>
 												<td>
 												<p align="center">
                                             <font color="#db0f21" size="5">
@@ -230,7 +230,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10838">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/15.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/15.gif"></a></font></a></b></td>
 												<td>
 												<p align="right">
                                             <font color="#db0f21" size="5">
@@ -238,7 +238,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=10452">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/16.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/16.gif"></a></font></a></b></td>
 												</font></b>
                                             </tr>
 											<tr>
@@ -249,7 +249,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=1743">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/17.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/17.gif"></a></font></a></b></td>
 												<td>
 												<p align="center">
                                             <font color="#db0f21" size="5">
@@ -257,7 +257,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=1745">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/18.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/18.gif"></a></font></a></b></td>
 												<td>
 												<p align="right">
                                             <font color="#db0f21" size="5">
@@ -265,7 +265,7 @@
 								<a href="default.asp?ArtNr=10687">
 								<font color="#FFFFFF">
 											<a href="default.asp?ArtNr=1747">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/lifestyle/19.gif"></a></font></a></b></td>
+					<img border="0" src="../images/start/lifestyle/19.gif"></a></font></a></b></td>
 											</tr>
 											<font color="#db0f21" size="5">
 												</table>
