--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_textile.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_textile.htm
@@ -106,24 +106,24 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=11117">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/10-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/10-1.gif"></a></b></td>
 								<td align="center" width="291">
 								<font color="#db0f21" size="5">
 								<p align="left">
 								<b><a href="default.asp?ArtNr=11118">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/10-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/10-2.gif"></a></b></td>
 									</tr>
 									<tr>
 								<td nowrap width="333">
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=11119">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/11-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/11-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=11120">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/11-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/11-2.gif"></a></b></td>
 									</tr>
 									<tr>
 								<td nowrap width="333">
@@ -132,13 +132,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=11076">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/9-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/9-1.gif"></a></b></td>
 								<td nowrap width="291">
 								<p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=11079">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/9-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/9-2.gif"></a></b></td>
 									</tr>
 									<tr>
 								<font color="#db0f21" size="5">
@@ -148,12 +148,12 @@
 								<font color="#db0f21" size="5">
 								<b>
                                 <a href="default.asp?ArtNr=1623">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/1-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/1-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1618">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/1-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/1-2.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -163,12 +163,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10106">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/2-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/2-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10690">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/4-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/4-2.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -178,12 +178,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1619">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/6-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/6-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10693">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/4-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/4-1.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -193,13 +193,13 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1624">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/5-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/5-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10104">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/2-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/2-2.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -209,12 +209,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10698">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/12-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/12-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10098">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/5-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/5-2.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -224,12 +224,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1132">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/7-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/7-1.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1128">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/6-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/6-2.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -239,12 +239,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1137">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/7-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/7-2.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1131">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/8-1.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/8-1.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -254,12 +254,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1129">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/3-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/3-2.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=1140">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/12-2.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/12-2.gif"></a></b></td>
 								</b>
 									</tr>
 									<tr>
@@ -267,12 +267,12 @@
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10697">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/0.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/0.gif"></a></b></td>
 								<td nowrap width="291">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=10697">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/textile/0.gif"></a></b></td>
+					<img border="0" src="../images/start/textile/0.gif"></a></b></td>
 									</tr>
 									</table>
 										</td>
