--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_tool.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_tool.htm
@@ -102,24 +102,24 @@
 								<td align="center" width="369">
                                 <p align="right">
                                 <a href="default.asp?ArtNr=1417">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/1-1.gif"></a></td>
+					<img border="0" src="../images/start/tool/1-1.gif"></a></td>
 								<td align="center" width="312">
 								<font color="#db0f21" size="5">
 								<p align="left">
 								<b><a href="default.asp?ArtNr=1144">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/1-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/1-2.gif"></a></b></td>
 									</tr>
 									<tr>
 								<td nowrap width="369">
                                 <p align="right">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=231">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/2-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/2-1.gif"></a></b></td>
 								<td nowrap width="312">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b><a href="default.asp?ArtNr=234">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/2-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/2-2.gif"></a></b></td>
 									</tr>
 									<tr>
 										<b><font color="#db0f21" size="5">
@@ -128,13 +128,13 @@
 								<p align="right">
 								<b><font color="#db0f21" size="5">
 								<a href="default.asp?ArtNr=10908">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/11-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/11-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left">
 								<b>
 								<font color="#db0f21" size="5">
 								<a href="default.asp?ArtNr=10910">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/11-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/11-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -144,13 +144,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=10780">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/4-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/4-1.gif"></a></b></td>
 								<td nowrap width="312">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=10781">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/4-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/4-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -161,13 +161,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=683">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/5-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/5-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=235">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/5-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/5-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -177,13 +177,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=897">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/6-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/6-1.gif"></a></b></td>
 								<td nowrap width="312">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=10292">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/6-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/6-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -194,13 +194,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=10093">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/7-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/7-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=947">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/7-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/7-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -210,13 +210,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=263">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/8-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/8-1.gif"></a></b></td>
 								<td nowrap width="312">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=946">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/8-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/8-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -227,13 +227,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=10058">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/9-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/9-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=636">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/9-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/9-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -243,13 +243,13 @@
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=908">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/10-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/10-1.gif"></a></b></td>
 								<td nowrap width="312">
                                 <p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=906">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/10-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/10-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -258,13 +258,13 @@
 								<p align="right"><b>
 								<font color="#db0f21" size="5">
 								<a href="default.asp?ArtNr=10756">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/3-1.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/3-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left">
 								<font color="#db0f21" size="5">
 								<b>
 								<a href="default.asp?ArtNr=10968">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/3-2.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/3-2.gif"></a></b></td>
 									</tr>
 									<tr>
 								<td nowrap width="369">
@@ -272,12 +272,12 @@
 								<b>
 								<font color="#db0f21" size="5">
 								<a href="default.asp?ArtNr=231">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/0.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/0.gif"></a></b></td>
 								<td nowrap width="312">
                                 <p align="left"><b>
 								<font color="#db0f21" size="5">
 								<a href="default.asp?ArtNr=231">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/0.gif"></a></b></td>
+					<img border="0" src="../images/start/tool/0.gif"></a></b></td>
 									</tr>
 									</table>
 										</td>
